[package]
name = "nu_plugin_bg"
version = "0.5.0"
authors = ["Darren Schroeder"]
edition = "2021"
repository = "https://github.com/fdncred/nu_plugin_bg"
description = "a nushell plugin called bg"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nu-plugin = "0.101.0"
nu-protocol = "0.101.0"
